--- a/src/css/Map.scss
+++ b/src/css/Map.scss
@@ -145,10 +145,12 @@
   position: absolute;
 }
 
+
 .tile.tile_2 {background-position: 0 0;}
 .tile.tile_1 {background-position: -100% 0;}
 .tile.tile_3 {background-position: -200% 0;}
 .tile.tile_8 {background-position: -300% 0;}
+.tile.tile_67 {background-position: -800% 0;}
 .tile.tile_85 {background-position: -400% 0;}
 .tile.tile_128 {background-position: -500% 0;}
 .tile.tile_123 {background-position: -600% 0;}
@@ -158,6 +160,8 @@
 .tile.tile_natural {background-position: 0 -100%;}
 .tile.tile_97 {background-position: -100% -100%;}
 .tile.tile_199 {background-position: -200% -100%;}
+
+
 
 .tile .marker {
   position: absolute;
