--- a/src/css/PlayerBoard.scss
+++ b/src/css/PlayerBoard.scss
@@ -220,6 +220,7 @@
 
 .tracker.tile_8 {background-position: -400% -100%;}
 .tracker.tile_64 {background-position: -600% -100%;}
+.tracker.tile_67 {background-position: -600% -100%;}
 .tracker.tile_85 {background-position: -700% -100%;}
 .tracker.tile_128 {background-position: -900% -100%;}
 .tracker.tile_123 {background-position: -1300% -100%;}
